--- a/assets/css/files/logo.css
+++ b/assets/css/files/logo.css
@@ -2,6 +2,10 @@
 
 .logo{
     padding-top: 1rem;
+    z-index: 10;
+    width: -moz-fit-content;
+    margin-left: 1rem;
+    width: fit-content;
 }
 #logoSpin{
     position: relative;
