--- a/assets/css/files/main.css
+++ b/assets/css/files/main.css
@@ -42,7 +42,12 @@
 .thirdbg{
     padding-top: 200px;
     height: 500px;
+}
+.home_thirdbg{
     background-image:url("../../img/bg/people.png");
+}
+.about_thirdbg{
+    background-image:url("../../img/bg/image5.jpg");
 }
 .noSlant_content{
     width: 80%;
@@ -51,7 +56,7 @@
     text-align: center;
     padding: 80px 0;
 }
-.content3{
+.bgTint{
     width: 80%;
     margin: 0 auto;
     height: 200px;
@@ -62,6 +67,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     font-size: 3rem;
     text-align: center;
+    padding:2rem;
 }
 
 .contact-section{
@@ -99,5 +105,4 @@
 }
 .list li{
     list-style-type: circle;
-    margin-bottom: 1rem;
 }
