--- a/assets/css/files/menu.css
+++ b/assets/css/files/menu.css
@@ -6,7 +6,6 @@
     top: 2rem;
 }
 #navbar{
-    width: 100%;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -15,6 +14,7 @@
     color: white;
     position: fixed;
     top: 2rem;
+    right:0;
 }
 #menuBurger{
     margin-right: 2rem;
@@ -28,6 +28,7 @@
     margin-right: 2rem;
     cursor: pointer;
     z-index: 5;
+    color:white;
 }
 #menuWord .bar{
     width: 0;
@@ -106,6 +107,10 @@
     margin-top: 0.5rem;
     font-size: 0;
     list-style: none;
+}
+.menuLink{
+    color:white;
+    text-decoration: none;
 }
 .change .menuItem{
     font-size: 2rem;
